syntax = "proto3";

package com.ecommerce.aspnet.user;

import "google/protobuf/wrappers.proto";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (UserProfile);
  rpc CreateUser(CreateUserRequest) returns (UserProfile);
  rpc GetUserByEmailAndPassword(GetUserByEmailAndPasswordRequest) returns (UserProfile);
  rpc changePassword(ChangePasswordRequest) returns (UserProfile);
}

message ChangePasswordRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue oldPassword = 2;
  google.protobuf.StringValue newPassword = 3;
}

message GetUserByIdRequest {
  google.protobuf.StringValue id = 1;
}

message GetUserByEmailAndPasswordRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message CreateUserRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue password = 3;
}

message UserProfile {
  string id = 1;
  string name= 2;
  string email = 3;
}
